Fix: vertical centered alignment of icon and text in checkbox labels

--- a/responsive_1/style.new.css
+++ b/responsive_1/style.new.css
@@ -302,6 +302,7 @@ h1 a:focus, h1 a:hover, h1 a:active {
 	padding: 0.125em 0.25em;
 	color: #444;
 	display: flex;
+	align-items: center;
 }
 [type="checkbox"] + label .icon {
 	display: inline-block;
